objects/cic_credit__Public_Record__c.object
<CustomObject>
    <fields>
        <fullName>cic_credit__Account_Ownership_Type__c</fullName>
        <description>creditPublicRecordAccountOwnershipType</description>
        <label>Account Ownership Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cic_credit__Court_name__c</fullName>
        <description>creditPublicRecordCourtName</description>
        <label>Court name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cic_credit__Credit_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Report</label>
        <referenceTo>cic_credit__Credit_Report__c</referenceTo>
        <relationshipLabel>Public Records</relationshipLabel>
        <relationshipName>Public_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cic_credit__Disposition_Date__c</fullName>
        <description>creditPublicRecordDispositionDate</description>
        <label>Disposition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cic_credit__Disposition_Type__c</fullName>
        <description>creditPublicRecordDispositionType</description>
        <label>Disposition Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cic_credit__Docket_Identifier__c</fullName>
        <description>creditPublicRecordDocketIdentifier</description>
        <label>Docket Identifier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cic_credit__Filed_Date__c</fullName>
        <description>creditPublicRecordFiledDate</description>
        <label>Filed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cic_credit__Legal_Obligation_Amount__c</fullName>
        <label>Legal Obligation Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cic_credit__Manual_Update_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>creditPublicRecordManualUpdateIndicator</description>
        <label>Manual Update Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cic_credit__Plaintiff_Name__c</fullName>
        <description>creditPublicRecordPlaintiffName</description>
        <label>Plaintiff Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cic_credit__Relationship__c</fullName>
        <label>Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Borrower</fullName>
                </value>
                <value>
                    <fullName>Co Borrower</fullName>
                </value>
                <value>
                    <fullName>Joint</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cic_credit__Source_Type__c</fullName>
        <description>creditRepositorySourceType</description>
        <label>Source Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cic_credit__Source__c</fullName>
        <description>creditRepositorySourceTypeOtherDescription</description>
        <label>Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cic_credit__Type__c</fullName>
        <description>creditPublicRecordType</description>
        <label>Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Public Record</label>
    <nameField>
        <displayFormat>PR-{00000000}</displayFormat>
        <label>Public Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Public Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>